@@ -31,7 +31,9 @@
 #include "cong-dispspec-element.h"
 #include "cong-editor-line-fragments.h"
 #include "cong-traversal-node.h"
+#include "cong-editor-line-manager-span-wrapper.h"
 
+#undef PRIVATE
 #define PRIVATE(x) ((x)->private)
 
 struct CongEditorNodeElementSpanDetails
@@ -120,7 +122,17 @@ static void
 create_areas (CongEditorNode *editor_node,
 	      const CongAreaCreationInfo *creation_info)
 {
-	/* Do nothing; the children will add their areas via our LineManager, and this will create the wrapper areas */
+	CongEditorLineManager *line_manager;
+
+	/* Create no areas; the children will add their areas via our LineManager, and this will create the wrapper areas */
+	
+	/* Need to set up the line manager though: */
+	line_manager = cong_editor_line_manager_span_wrapper_new (cong_editor_node_get_widget (editor_node),
+								  editor_node,
+								  creation_info->line_manager);
+
+	cong_editor_node_set_line_manager_for_children (editor_node,
+							line_manager);
 }
 #else
 static CongEditorArea*
