@@ -151,7 +151,28 @@ static void
 create_areas (CongEditorNode *editor_node,
 	      const CongAreaCreationInfo *creation_info)
 {
-	g_assert_not_reached (); /* FIXME */
+	CongEditorNodeElementAdmonition *editor_node_element_admonition = CONG_EDITOR_NODE_ELEMENT_ADMONITION (editor_node);
+	CongEditorArea *block_area;
+	CongEditorArea *area_label;
+	GdkPixbuf* pixbuf;
+
+	g_return_if_fail (editor_node);
+
+	/* FIXME cache the pixbufs; only load once */
+	pixbuf = load_icon (get_icon_filename (editor_node_element_admonition));
+
+	area_label = cong_editor_area_pixbuf_new (cong_editor_node_get_widget (editor_node),
+						  pixbuf);
+	g_object_unref (G_OBJECT (pixbuf));
+
+	block_area = cong_editor_area_labelled_new (cong_editor_node_get_widget (editor_node),
+						    area_label);
+
+	cong_editor_node_create_block_area (editor_node,
+					    creation_info,
+					    block_area,
+					    TRUE);
+	/* FIXME: should we attach signals, or store the area anywhere? */
 }
 #else
 static CongEditorArea*
