@@ -444,7 +444,8 @@ create_areas (CongEditorNode *editor_node,
 
 	cong_editor_node_create_block_area (editor_node,
 					    creation_info,
-					    block_area);
+					    block_area,
+					    TRUE);
 
 	/* FIXME: should we call this: */
 	cong_editor_area_connect_node_signals (block_area,
